Revert "Fix charger init triggers after moving to health AIDL"
https://github.com/LineageOS/android_system_core/blob/lineage-21.0/init/init.cpp#L1099

Partially reverts commit 6e287287b837e11f736ae1457343214d81b28aac.

Change-Id: I284f80f364e9057a8373a015f0acaee3ef9e395d

--- a/rootdir/etc/init.qti.kernel.rc
+++ b/rootdir/etc/init.qti.kernel.rc
@@ -171,5 +171,5 @@ service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /system/vendor/etc/m
     group root
     disabled
 
-on property:init.svc.vendor.charger=running
+on charger
     start kernel-post-boot
