--- a/overlay/LineageSDKOverlayStone/AndroidManifest.xml
+++ b/overlay/LineageSDKOverlayStone/AndroidManifest.xml
@@ -4,6 +4,8 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.settings.overlay.veux">
-    <overlay android:targetPackage="com.android.settings" />
+    package="lineageos.platform.overlay.stone">
+    <overlay
+        android:isStatic="true"
+        android:targetPackage="lineageos.platform" />
 </manifest>
