--- a/overlay/SettingsOverlayStone/AndroidManifest.xml
+++ b/overlay/SettingsOverlayStone/AndroidManifest.xml
@@ -4,6 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.overlay.veux">
-    <overlay android:targetPackage="android" />
+    package="com.android.settings.overlay.stone">
+    <overlay android:targetPackage="com.android.settings" />
 </manifest>
