--- a/overlay/SystemUIOverlayStone/AndroidManifest.xml
+++ b/overlay/SystemUIOverlayStone/AndroidManifest.xml
@@ -4,8 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="lineageos.platform.overlay.veux">
-    <overlay
-        android:isStatic="true"
-        android:targetPackage="lineageos.platform" />
+    package="com.android.systemui.overlay.stone">
+    <overlay android:targetPackage="com.android.systemui" />
 </manifest>
