--- a/overlay/WifiOverlayStone/AndroidManifest.xml
+++ b/overlay/WifiOverlayStone/AndroidManifest.xml
@@ -4,6 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.wifi.resources.overlay.veux">
+    package="com.android.wifi.resources.overlay.stone">
     <overlay android:targetPackage="com.android.wifi.resources" />
 </manifest>
