--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -176,3 +176,6 @@ service svi_on /vendor/bin/ppd "svi:on"
 
 on property:ro.vendor.display.svi=1 && property:sys.boot_completed=1
     start svi_on
+
+on property:ro.boot.hwname=*
+    setprop ro.boot.product.hardware.sku ${ro.boot.hwname}
