--- a/gps/etc/gps.conf
+++ b/gps/etc/gps.conf
@@ -80,7 +80,7 @@ CAPABILITIES=0x17
 # 0x2: LPP Control Plane
 # 0x4: LPP User Plane for NR5G
 # 0x8: LPP Control Plane for NR5G
-LPP_PROFILE = 2
+LPP_PROFILE = 3
 
 ####################################
 #Datum Type
@@ -146,7 +146,7 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0xf
 
 ##################################################
 # Select technology for LPPe Control Plane
@@ -299,7 +299,7 @@ MODEM_TYPE = 1
 # 1 : enabled
 # This setting enables GPS engine to estimate clock
 # bias and drift when the signal from at least 1
-# SV is available and the UE’s position is known by
+# SV is available and the UE position is known by
 # other position engines.
 #POSITION_ASSISTED_CLOCK_ESTIMATOR_ENABLED = 0
 
