--- a/rootdir/etc/init.qti.kernel.rc
+++ b/rootdir/etc/init.qti.kernel.rc
@@ -170,3 +170,6 @@ service vendor.msm_irqbalance /vendor/bin/msm_irqbalance -f /system/vendor/etc/m
     user root
     group root
     disabled
+
+on property:init.svc.vendor.charger=running
+    start kernel-post-boot
