stone: overlay: Rename vendor overlays
* Rename vendor packages to generic Target

--- a/overlay/FrameworkOverlayTarget/AndroidManifest.xml
+++ b/overlay/FrameworkOverlayTarget/AndroidManifest.xml
@@ -4,6 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="android.overlay.stone">
+    package="com.android.overlay.target">
     <overlay android:targetPackage="android" />
 </manifest>
