--- a/overlay/SettingsOverlayTarget/AndroidManifest.xml
+++ b/overlay/SettingsOverlayTarget/AndroidManifest.xml
@@ -4,6 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.settings.overlay.stone">
+    package="com.android.settings.overlay.target">
     <overlay android:targetPackage="com.android.settings" />
 </manifest>
