--- a/overlay/WifiOverlayTarget/AndroidManifest.xml
+++ b/overlay/WifiOverlayTarget/AndroidManifest.xml
@@ -4,6 +4,8 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.systemui.overlay.stone">
-    <overlay android:targetPackage="com.android.systemui" />
+    package="com.android.wifi.resources.overlay.target">
+    <overlay
+        android:targetName="WifiCustomization"
+        android:targetPackage="com.android.wifi.resources" />
 </manifest>
