--- a/overlay/SystemUIOverlayTarget/AndroidManifest.xml
+++ b/overlay/SystemUIOverlayTarget/AndroidManifest.xml
@@ -4,8 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.wifi.resources.overlay.stone">
-    <overlay
-        android:targetName="WifiCustomization"
-        android:targetPackage="com.android.wifi.resources" />
+    package="com.android.systemui.overlay.target">
+    <overlay android:targetPackage="com.android.systemui" />
 </manifest>
